--- a/app/src/main/res/layout/fragment_w2.xml
+++ b/app/src/main/res/layout/fragment_w2.xml
@@ -5,12 +5,25 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="vertical"
+        android:padding="@dimen/dimen72"
+        >
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Fragment 2"
-            android:textSize="@dimen/dimen50"
+            android:text="@string/welcome3"
+            android:textSize="30sp"
+            android:fontFamily="@font/quicksandbold"
+            android:layout_marginBottom="@dimen/dimen10"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/welcome4"
+            android:fontFamily="@font/quicksandregular"
+
             />
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
