--- a/app/src/main/res/layout/splash_screen.xml
+++ b/app/src/main/res/layout/splash_screen.xml
@@ -12,15 +12,23 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Habits Tracker"
+            android:text="@string/Splash1"
+            android:fontFamily="@font/quicksandbold"
             android:textStyle="bold"
-            android:textSize="30dp"
+            android:textSize="40sp"
             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Splash Screen"
-            android:textSize="12dp"
+            android:text="@string/Splash2"
+            android:textSize="20sp"
+            android:fontFamily="@font/quicksandlight"
+            android:layout_marginBottom="@dimen/dimen50"
+            />
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminate="true"
             />
     </LinearLayout>
 
