--- a/app/src/main/res/drawable/welcome3.xml
+++ b/app/src/main/res/drawable/welcome3.xml
@@ -6,7 +6,7 @@
                 android:bottomRightRadius="@dimen/dimen40"
                 />
             <solid
-                android:color="#D7722C"
+                android:color="#006A4E"
                 />
         </shape>
     </item>
