Penambahan Fragment List dan Perbaikan tampilan

--- a/app/src/main/res/drawable/habit_add.xml
+++ b/app/src/main/res/drawable/habit_add.xml
@@ -3,10 +3,10 @@
     <item>
         <shape>
             <corners
-                android:bottomRightRadius="@dimen/dimen40"
+                android:radius="@dimen/dimen20"
                 />
             <solid
-                android:color="#006A4E"
+                android:color="#B8D5CD"
                 />
         </shape>
     </item>
