--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,9 +24,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:background="#006A4E"
+            android:background="#2E856E"
             app:menu="@menu/navigation"
             app:itemTextColor="#FFF"
+            app:itemIconTint="#FFF"
             />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
