--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:background="#FFF"
         android:orientation="vertical"
-    >
+        >
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -61,7 +61,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Kegiatan hari ini : "
+                    android:text="List Habit "
                     android:textSize="20sp"
                     android:padding="@dimen/dimen10"
                     />
@@ -74,17 +74,12 @@
                     android:padding="@dimen/dimen20"
                     android:layout_margin="@dimen/dimen5"
                     >
-                    <CheckBox
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="@dimen/dimen10"
-                        android:layout_weight="1"
-                        />
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
                         android:layout_weight="5"
+                        android:gravity="center"
                         >
                         <TextView
                             android:id="@+id/welcome2_atas"
@@ -114,12 +109,6 @@
                     android:padding="@dimen/dimen20"
                     android:layout_margin="@dimen/dimen5"
                     >
-                    <CheckBox
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="@dimen/dimen10"
-                        android:layout_weight="1"
-                        />
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -153,12 +142,6 @@
                     android:padding="@dimen/dimen20"
                     android:layout_margin="@dimen/dimen5"
                     >
-                    <CheckBox
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="@dimen/dimen10"
-                        android:layout_weight="1"
-                        />
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -192,12 +175,6 @@
                     android:padding="@dimen/dimen20"
                     android:layout_margin="@dimen/dimen5"
                     >
-                    <CheckBox
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="@dimen/dimen10"
-                        android:layout_weight="1"
-                        />
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -222,6 +199,30 @@
                     </LinearLayout>
                 </LinearLayout>
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center"
+                    android:background="@drawable/habit_add"
+                    android:padding="@dimen/dimen20"
+                    android:layout_margin="@dimen/dimen5"
+                    >
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/ic_add_black_24dp"
+                        android:layout_marginRight="@dimen/dimen10"
+                        />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Tambah Habit"
+                        android:textSize="15sp"
+                        android:textColor="#FFF"
+                        android:fontFamily="@font/quicksandbold"
+                    />
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
