--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -5,4 +5,9 @@
         android:title="Home"
         android:icon="@drawable/ic_home_black_24dp"
         />
+    <item
+        android:id="@+id/nav_list"
+        android:title="List"
+        android:icon="@drawable/ic_list_black_24dp"
+        />
 </menu>
