--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:background="#2E856E"
+            android:background="#8ABAAE"
             app:menu="@menu/navigation"
             app:itemTextColor="#FFF"
             app:itemIconTint="#FFF"
