--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -10,23 +10,22 @@
     <LinearLayout
         android:id="@+id/welcome2_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:background="#FFF"
         android:orientation="vertical"
         >
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#2E856E"
+            android:background="#FFF"
             android:orientation="vertical"
             >
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:padding="@dimen/dimen30"
-                android:background="@drawable/welcome2"
                 >
                 <TextView
                     android:layout_width="wrap_content"
@@ -35,107 +34,13 @@
                     android:textSize="20sp"
                     android:padding="@dimen/dimen10"
                     />
-                <LinearLayout
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recycle_list"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:gravity="center"
-                    android:background="@drawable/habit_list"
-                    android:padding="@dimen/dimen20"
-                    android:layout_margin="@dimen/dimen5"
-                    >
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:layout_weight="5"
-                        android:gravity="center"
-                        >
-                        <TextView
-                            android:id="@+id/welcome2_atas"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="Solat Subuh"
-                            android:textSize="20sp"
-                            android:textColor="#FFF"
-                            android:fontFamily="@font/quicksandbold"
-                            />
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="Harian pada pukul 04.00 AM"
-                            android:fontFamily="@font/quicksandregular"
-                            android:textSize="10sp"
-                            />
-                    </LinearLayout>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:gravity="center"
-                    android:background="@drawable/habit_list"
-                    android:padding="@dimen/dimen20"
-                    android:layout_margin="@dimen/dimen5"
-                    >
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:layout_weight="5"
-                        >
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="Belajar Pagi"
-                            android:textSize="20sp"
-                            android:textColor="#FFF"
-                            android:fontFamily="@font/quicksandbold"
-                            />
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="Harian pada pukul 06.00 AM"
-                            android:fontFamily="@font/quicksandregular"
-                            android:textSize="10sp"
-                            />
-                    </LinearLayout>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:gravity="center"
-                    android:background="@drawable/habit_list"
-                    android:padding="@dimen/dimen20"
-                    android:layout_margin="@dimen/dimen5"
-                    >
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:layout_weight="5"
-                        >
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="Lari Pagi"
-                            android:textSize="20sp"
-                            android:textColor="#FFF"
-                            android:fontFamily="@font/quicksandbold"
-                            />
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="Mingguan pada pukul 07.00 AM"
-                            android:textSize="10sp"
-                            android:fontFamily="@font/quicksandregular"
-                            />
-                    </LinearLayout>
-                </LinearLayout>
-
+                    android:layout_height="match_parent"
+                    android:outlineAmbientShadowColor="#B8D5CD"
+                    android:outlineSpotShadowColor="#B8D5CD"
+                    />
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -158,7 +63,7 @@
                         android:textSize="15sp"
                         android:textColor="#FFF"
                         android:fontFamily="@font/quicksandbold"
-                    />
+                        />
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
