--- a/app/src/main/res/layout/fragment_w1.xml
+++ b/app/src/main/res/layout/fragment_w1.xml
@@ -8,21 +8,29 @@
         android:gravity="center"
         android:orientation="vertical"
         android:padding="@dimen/dimen72"
+        android:background="#FFF"
         >
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/welcome1"
-            android:textSize="30sp"
+            android:textSize="20sp"
+            android:gravity="center"
             android:fontFamily="@font/quicksandbold"
             android:layout_marginBottom="@dimen/dimen10"
+            />
+        <ImageView
+            android:layout_width="@dimen/dimen200"
+            android:layout_height="@dimen/dimen200"
+            android:background="@drawable/applogo"
             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:text="@string/welcome2"
             android:fontFamily="@font/quicksandregular"
-
+            android:textSize="@dimen/dimen15"
             />
     </LinearLayout>
 
