--- a/app/src/main/res/layout/fragment_w2.xml
+++ b/app/src/main/res/layout/fragment_w2.xml
@@ -7,21 +7,30 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:orientation="vertical"
+        android:background="#FFF"
         android:padding="@dimen/dimen72"
         >
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/welcome3"
-            android:textSize="30sp"
+            android:textSize="20sp"
+            android:gravity="center"
             android:fontFamily="@font/quicksandbold"
             android:layout_marginBottom="@dimen/dimen10"
             />
+        <ImageView
+            android:layout_width="@dimen/dimen200"
+            android:layout_height="@dimen/dimen200"
+            android:background="@drawable/applogo"
+            />
         <TextView
+            android:gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/welcome4"
             android:fontFamily="@font/quicksandregular"
+            android:textSize="@dimen/dimen15"
 
             />
     </LinearLayout>
