Commit DB Room no error

--- a/app/src/main/res/layout/list_list.xml
+++ b/app/src/main/res/layout/list_list.xml
@@ -35,6 +35,7 @@
                         android:fontFamily="@font/quicksandbold"
                         />
                     <TextView
+                        android:id="@+id/habwak"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Harian pada pukul 04.00 AM"
