--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -35,7 +35,7 @@
                     android:padding="@dimen/dimen10"
                     />
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recycle_list"
+                    android:id="@+id/recycle_list1"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:outlineAmbientShadowColor="#B8D5CD"
@@ -68,4 +68,22 @@
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".MainActivity">
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:contentDescription="Add"
+            android:src="@drawable/ic_add_circle_black_24dp"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
