--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -35,36 +35,12 @@
                     android:padding="@dimen/dimen10"
                     />
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recycle_list1"
+                    android:id="@+id/recyclerview"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:outlineAmbientShadowColor="#B8D5CD"
                     android:outlineSpotShadowColor="#B8D5CD"
                     />
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:gravity="center"
-                    android:background="@drawable/habit_add"
-                    android:padding="@dimen/dimen20"
-                    android:layout_margin="@dimen/dimen5"
-                    >
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:background="@drawable/ic_add_black_24dp"
-                        android:layout_marginRight="@dimen/dimen10"
-                        />
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Tambah Habit"
-                        android:textSize="15sp"
-                        android:textColor="#FFF"
-                        android:fontFamily="@font/quicksandbold"
-                        />
-                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
@@ -83,7 +59,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:contentDescription="Add"
-            android:src="@drawable/ic_add_circle_black_24dp"/>
+            app:backgroundTint="#B8D5CD"
+            android:src="@drawable/ic_add_black_24dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
