--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -30,9 +30,11 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="List Habit "
-                    android:textSize="20sp"
-                    android:padding="@dimen/dimen10"
+                    android:text="Daftar Habit "
+                    android:gravity="center"
+                    android:layout_marginBottom="@dimen/dimen20"
+                    android:fontFamily="@font/quicksandbold"
+                    android:textSize="25sp"
                     />
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recyclerview"
@@ -51,6 +53,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
+
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab"
             app:layout_constraintBottom_toBottomOf="parent"
