--- a/app/src/main/res/layout/habit_update.xml
+++ b/app/src/main/res/layout/habit_update.xml
@@ -11,11 +11,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="Tambah Habit"
+        android:text="Ubah Habit"
         android:layout_marginBottom="@dimen/dimen20"
         android:fontFamily="@font/quicksandbold"
         android:textSize="25sp"
         />
+
     <EditText
         android:id="@+id/habits_nama"
         android:layout_width="match_parent"
@@ -58,6 +59,14 @@
         android:textColor="#FFF"
         android:background="@drawable/habit_add"
         android:layout_marginBottom="@dimen/dimen10"
+        android:padding="@dimen/dimen10" />
+    <Button
+        android:id="@+id/button_delete"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Hapus"
+        android:textColor="#FFF"
+        android:background="@drawable/habit_cancel"
         android:padding="@dimen/dimen10" />
     <Button
         android:id="@+id/button_cancel"
