--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:id="@+id/nav_today"
-        android:title="Home"
-        android:icon="@drawable/ic_home_black_24dp"
-        />
+<!--    <item-->
+<!--        android:id="@+id/nav_today"-->
+<!--        android:title="Home"-->
+<!--        android:icon="@drawable/ic_home_black_24dp"-->
+<!--        />-->
     <item
         android:id="@+id/nav_list"
         android:title="List"
         android:icon="@drawable/ic_list_black_24dp"
+        />
+    <item
+        android:id="@+id/nav_info"
+        android:title="Info"
+        android:icon="@drawable/ic_help_24dp"
         />
 </menu>
