Commit sebelum UAS

--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="Fragment_today"
+    tools:context="Fragment_list"
     android:background="#FFF"
     >
 
@@ -28,7 +28,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="SELASA"
+                android:text="@strings/selasa"
                 android:textColor="#FFF"
                 android:fontFamily="@font/quicksandbold"
                 android:textSize="15sp"
