--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -14,47 +14,33 @@
         android:padding="@dimen/dimen72"
         android:background="#FFF"
         >
-        <ImageView
-            android:layout_width="@dimen/dimen200"
-            android:layout_height="@dimen/dimen200"
-            android:background="@drawable/applogo"
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/info1"
+            android:textSize="@dimen/font20"
+            android:gravity="center"
+            android:fontFamily="@font/quicksandbold"
+            android:layout_marginBottom="@dimen/dimen50"
             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="@string/info2"
+            android:textSize="@dimen/font12"
+            android:fontFamily="@font/quicksandregular"
+            android:layout_marginBottom="@dimen/dimen30"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/info3"
+            android:textSize="@dimen/font12"
             android:gravity="center"
-            android:text="@string/welcome5"
-            android:textSize="@dimen/dimen15"
             android:fontFamily="@font/quicksandregular"
             android:layout_marginBottom="@dimen/dimen10"
             />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/welcome6"
-            android:textSize="@dimen/dimen20"
-            android:fontFamily="@font/quicksandbold"
 
-            />
-
-        <!--  Button ~ set time for alarm -->
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Set Alarm"
-            android:onClick="showTimerPickerFragment"
-            android:background="@color/colorAccent"
-            android:layout_marginTop="16dp"
-            android:textColor="#ffffff" />
-
-        <!--  Button ~ cancel time alarm -->
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Cancel Alarm"
-            android:onClick="cancelAlarm"
-            android:background="#ffffff"
-            android:layout_marginTop="16dp"
-            android:textColor="@color/colorAccent" />
     </LinearLayout>
 </FrameLayout>
